
EXTRA_DIST = README.Debian README.Maintainer \
	changelog compat control copyright \
	rules source/format tests/control \
	tests/daemons watchfrr.rc \
	backports/README backports/rules \
        backports/debian8/debian/source/format \
        backports/debian8/exclude \
        backports/debian8/versionext \
        backports/debian9/debian/source/format \
        backports/debian9/exclude \
        backports/debian9/versionext \
	backports/ubuntu12.04/debian/control \
	backports/ubuntu12.04/debian/frr.install \
	backports/ubuntu12.04/debian/frr.postinst \
	backports/ubuntu12.04/debian/frr.postrm \
	backports/ubuntu12.04/debian/rules \
	backports/ubuntu12.04/debian/source/format \
	backports/ubuntu12.04/exclude \
	backports/ubuntu12.04/versionext \
	backports/ubuntu14.04/debian/control \
	backports/ubuntu14.04/debian/frr.install \
	backports/ubuntu14.04/debian/frr.postinst \
	backports/ubuntu14.04/debian/frr.postrm \
	backports/ubuntu14.04/debian/rules \
	backports/ubuntu14.04/debian/source/format \
	backports/ubuntu14.04/exclude \
	backports/ubuntu14.04/versionext \
	backports/ubuntu16.04/debian/source/format \
	backports/ubuntu16.04/exclude \
	backports/ubuntu16.04/versionext \
	backports/ubuntu17.10/debian/control \
	backports/ubuntu17.10/debian/source/format \
	backports/ubuntu17.10/exclude \
	backports/ubuntu17.10/versionext \
	backports/ubuntu18.04/debian/control \
	backports/ubuntu18.04/debian/source/format \
	backports/ubuntu18.04/exclude \
	backports/ubuntu18.04/versionext \
	frr-doc.docs frr-doc.info frr-doc.install \
	frr-doc.lintian-overrides frr.conf \
	frr-dbg.lintian-overrides \
	frr.dirs frr.docs frr.install \
	frr.lintian-overrides frr.logrotate \
	frr.manpages frr.pam frr.postinst frr.postrm \
	frr.preinst frr.prerm \
	frr-pythontools.install
